--- a/app/views/access/login.html.erb
+++ b/app/views/access/login.html.erb
@@ -1,21 +1,17 @@
+<h1>Login</h1>
 
-<div class="text-center">
-<% @page_title = "Signup" %>
-<div class="Sign_Form">
-  <h1>Sign Up</h1>
-  <%= form_for(:user, :url => {:controller => 'users', :action => 'create'}) do |f| %>
-    <p> Username:</br> <%= f.text_field :username%> </p>
-    <p> Email:</br> <%= f.text_field :email%> </p>
-    <p> Password:</br> <%= f.password_field :password%></p>
-    <p> Password Confirmation:</br> <%= f.password_field :password_confirmation%> </p>
-    <%= f.submit :Signup %>
-  <% end %>
-  <% if @user.errors.any? %>
-    <ul class="Signup_Errors">
-    <% for message_error in @user.errors.full_messages %>
-      <li>* <%= message_error %></li>
-    <% end %>
-    </ul>
-  <% end %>
-</div>
-</div>
+  <%= form_tag(login_path) do %>
+<p>
+  <%= label_tag(:username)%>
+  <%= text_field_tag(:username, params[:username], autofocus: true)%>
+</p>
+<p>
+  <%= label_tag(:password)%>
+  <%= password_field_tag(:password)%>
+</p>
+<p>
+  <%= submit_tag("Log in", class: "btn btn-primary") %>
+</p>
+<% end %>
+
+<%= link_to "Don't have an account? Sign up here", signup_path%>
