another commit with some views

--- a/app/views/access/home.html.erb
+++ b/app/views/access/home.html.erb
@@ -1,3 +1,16 @@
-<h1>Welcome to our Website!</h1>
+<div class="container-fluid">
 
-<%= link_to "Logout", logout_path, class:"btn btn-danger" %>
+<h1>Welcome to Tripr!</h1>
+
+<%= link_to "Logout", logout_path, class:"btn btn-tripr" %>
+
+<%= link_to "New Trip", new_trip_path, class:"btn btn-tripr" %>
+
+<div class="row">
+
+<div class="col-xs-6 col-md-4">lhfgkytfkytv tyf kygfckygft kyfky fk yghvfk yghv kyghvyk ghvky gfhvjy gfvhv jy hyhv ghm  yh v jhh vch  yfcg yghy gchjycghyh ghvmh </div>
+<div class="col-xs-12 col-md-8">hfgkytfkytv tyf kygfckygft kyfky fk yghvfk yghv kyghvyk ghvky gfhvjy gfvhv jy hyhv ghm  yh v jhh vch  yfcg yghy gchjycghyh ghvmh </div>
+
+</div>
+
+</div>
