--- a/app/views/access/signup.html.erb
+++ b/app/views/access/signup.html.erb
@@ -21,8 +21,7 @@
   <%= f.password_field(:password) %>
 </p>
 <p>
-  <%= f.submit("Signup", class: "btn btn-primary") %>
+  <%= f.submit("Signup", class: "btn btn-tripr") %>
 </p>
   <%= link_to "Have an account already? Log in here", login_path %>
 <% end %>
-
