--- a/app/views/access/login.html.erb
+++ b/app/views/access/login.html.erb
@@ -1,5 +1,6 @@
-<h1>Login</h1>
-
+<div class="container-fluid">
+<h1>LOGIN</h1>
+<div class="logincontainer">
   <%= form_tag(login_path) do %>
 <p>
   <%= label_tag(:username)%>
@@ -10,8 +11,11 @@
   <%= password_field_tag(:password)%>
 </p>
 <p>
-  <%= submit_tag("Log in", class: "btn btn-primary") %>
+  <%= submit_tag("Log in", class: "btn") %>
 </p>
 <% end %>
 
-<%= link_to "Don't have an account? Sign up here", signup_path%>
+
+<%= link_to "Don't have an account? Sign up here.", signup_path%>
+</div>
+</div>
