--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,2 +1,19 @@
-<h1>Trips#show</h1>
-<p>Find me in app/views/trips/show.html.erb</p>
+<div class ="row">
+    <div class ="col-xs-12 col-sm-6 col-md-8">
+    <br>
+      <span><h1> TRIPNAMEHERE , </h1><h4>( City, Country )</h4></span>
+    </div>
+  </div>
+    <div class ="row">
+      <div class ="col-xs-6 col-md-4">
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-8">
+        <div class="table-responsive">
+          <table class="table">
+            ...
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
