--- a/app/assets/stylesheets/access.css.scss
+++ b/app/assets/stylesheets/access.css.scss
@@ -5,11 +5,11 @@
 
 body{
   font-family: mankSans;
+  letter-spacing: 2px;
   color: white;
   background: url('positanonight.jpg') no-repeat center center fixed;
   background-size: cover;
   width:100%;
-  letter-spacing: 2px;
 }
 
 .glyphicon glyphicon-globe{
@@ -74,6 +74,31 @@ input{
     text-decoration: none;
   };
 }
+.btn.btn-activ-add{
+  border-radius: 0px;
+  border-color: white;
+  border: 0px solid white;
+  background-image: none;
+  background: #fff;
+  opacity: .5;
+  padding-left: 6px;
+  padding-right: 6px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  display: inline-block;
+
+  float: right !important;
+  a {
+    color: black;
+    text-decoration: none;
+  }
+  &:hover {
+    background: white;
+    color: white;
+    border: 2px solid white;
+    text-decoration: none;
+  };
+}
 
 
 
@@ -85,14 +110,6 @@ a{
   border: 2px solid white;
   width: 300px;
   padding: 20px;
-}
-
-.sidebarfeed .col-xs-6 .col-md-4{
- background-color: white;
- border: 2px solid white;
- color: blue;
- width: 200px;
- height: 200px;
 }
 
 .col-md-8{
@@ -118,15 +135,15 @@ a{
 
 #newTripForm{
   background: #fff;
-  opacity: .8;
+  opacity: 1;
   width: 100%;
-  height: 480px;
+  height: 420px;
   padding: 20px;
   color: black;
 }
 
 .headerstart{
-    font-size: 30px;
+    font-size: 49px;
   }
 .headerend{
     font-size: 20px;
@@ -149,7 +166,7 @@ a{
   background-color: pink;
   background: url('http://blog.travefy.com/wp-content/uploads/2013/07/wonderful-beach-hd-wallpaper-nature-amp-landscape-wallpapers.jpg') no-repeat center center fixed;
   background-size: cover;
-  margin: 40px;
+  margin: 60px;
   &:hover {
     text-decoration: none;
   };
@@ -160,10 +177,43 @@ a{
   vertical-align: center;
   text-align: center;
   font-size: 30px;
-  padding-top: 110px;
+  padding-top: 90px;
 }
 
 #countdown{
   font-size: 49px;
 }
 
+.tripdetail{
+
+}
+
+.sidebarfeed .col-xs-6 .col-md-4{
+ background-color: white;
+ border: 2px solid white;
+ color: blue;
+ width: 50px;
+ height: 200px;
+ position: absolute;
+}
+
+.tripdiaryday{
+
+}
+
+.row{
+  background-color: #010136;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+}
+
+#trip_end_date_1i{
+  font-family: mankSans;
+  letter-spacing: 2px;
+}
+
+option{
+  font-family: mankSans;
+  letter-spacing: 2px;
+}
