--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,4 +1,5 @@
-<div class="container-fluid">
+<%= render 'layouts/header' %>
+
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
     <div class="navbar-header">
@@ -69,11 +70,10 @@
         </p>
 
       <% end %>
-
-
-
     </div>
   </div>
 </div>
 
 Other things to do here: date input | add hidden field date stamp, rename form inputs | put placeholders in | make the boxes aligned and better lengths | add the image upload and make the background image this one | make the box the length of the form flex with form size | Make the location input form an autocomplete google maps form | Option to add people - from friends | Make sure the end date is after start date validation workd - code started in model and controller | Add twitter/fb/g+ ? |
+
+<%= render 'layouts/footer' %>
