adding the diary view

--- a/app/assets/stylesheets/access.css.scss
+++ b/app/assets/stylesheets/access.css.scss
@@ -201,12 +201,12 @@ a{
 
 }
 
-.row{
-  background-color: #010136;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-bottom: 10px;
-}
+// .row{
+//   background-color: #010136;
+//   padding-left: 10px;
+//   padding-right: 10px;
+//   padding-bottom: 10px;
+// }
 
 #trip_end_date_1i{
   font-family: mankSans;
