--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,4 +1,10 @@
 <%= render 'layouts/header' %>
+    <script>
+    $(document).ready(function(){
+    $('#calendar').fullCalendar({
+    });
+  });
+  </script>
   <div class ="row">
       <div class ="col">
       <br>
@@ -12,7 +18,7 @@
     <div class ="row">
       <div class ="col">
       <br>
-      <div class="col-xs-12 col-sm-6 col-md-8">
+      <div class="col-md-8">
         <span class="inline-block">
           <p class="tripdetail">Departure: <%= @trip.start_date %> </p>&nbsp&nbsp<p class="tripdetail">Return: <%= @trip.start_date %> </p>
         <btn class = "btn btn-tripr-add"><%= link_to "+ NEW ACTIVITY", new_trip_activity_path(@trip.id) %></btn>
@@ -21,7 +27,7 @@
       </div>
     </div>
       <div class ="row">
-        <div class ="sidebarfeed col-xs-6 col-md-4">
+        <div class ="col-md-4 sidebarfeed">
           <span class="inline-block"><p>ACTIVITY BAR</p><btn class = "btn btn-activ-add"><%= link_to "+ NEW", new_trip_activity_path(@trip.id) %></btn></span>
           <% @trip.activities.each do |a|  %>
             <div>
@@ -31,8 +37,9 @@
             </div>
           <% end  %>
         </div>
-        <div class="tripdiaryday col-xs-12 col-sm-6 col-md-8">
+        <div class="col-md-8 tripdiaryday">
           <p>TRIP PLANNER</p>
+          <div id='calendar'></div>
         </div>
       </div>
     </div>
@@ -74,10 +81,6 @@ setInterval(function () {
 
 }, 1000);
 </script>
-<script>
-  $('#animatedElement').onClick(function() {
-    $(this).addClass("fadeIn");
-  });
-</script>
+
 
 To do: get it to set out a diary form using trip dates | get the countdown clock to use date for this trip | add activities window on the left | add links for the activities through to the activity pages or pop up modals showing details (perhaps better - no need to leave the page).
