--- a/app/assets/stylesheets/access.css.scss
+++ b/app/assets/stylesheets/access.css.scss
@@ -1,12 +1,12 @@
 .container-fluid{
-  margin-top: 30px;
-  width:100%;
+  margin-top: 30px !important;;
+  width:100% !important;;
 }
 
 body{
-  font-family: mankSans;
-  letter-spacing: 2px;
-  color: white;
+  font-family: mankSans !important;
+  letter-spacing: 2px !important;
+  color: white !important;
   background: url('positanonight.jpg') no-repeat center center fixed;
   background-size: cover;
   width:100%;
@@ -17,8 +17,8 @@ body{
 }
 
 .welcome{
-  font-family: mankSans;
-  font-size: 49px;
+  font-family: mankSans !important;
+  font-size: 49px !important;
 }
 
 input{
@@ -201,19 +201,19 @@ a{
 
 }
 
-// .row{
-//   background-color: #010136;
-//   padding-left: 10px;
-//   padding-right: 10px;
-//   padding-bottom: 10px;
-// }
+.row{
+  background-color: #010136;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+}
 
 #trip_end_date_1i{
-  font-family: mankSans;
+  font-family: mankSans !important;
   letter-spacing: 2px;
 }
 
 option{
-  font-family: mankSans;
+  font-family: mankSans !important;
   letter-spacing: 2px;
 }
