--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,10 +1,14 @@
 <%= render 'layouts/header' %>
+
     <script>
     $(document).ready(function(){
-    $('#calendar').fullCalendar({
+      var date = gon.start_date;
+      console.log(date);
+      $('#calendar').fullCalendar({});
+      $('#calendar').fullCalendar('gotoDate', date );
     });
-  });
   </script>
+
   <div class ="row">
       <div class ="col">
       <br>
@@ -22,12 +26,29 @@
         <span class="inline-block">
           <p class="tripdetail">Departure: <%= @trip.start_date %> </p>&nbsp&nbsp<p class="tripdetail">Return: <%= @trip.start_date %> </p>
         <btn class = "btn btn-tripr-add"><%= link_to "+ NEW ACTIVITY", new_trip_activity_path(@trip.id) %></btn>
+
+        <div id="fullCalModal" class="modal fade">
+              <div class="modal-dialog">
+                  <div class="modal-content">
+                      <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span> <span class="sr-only">close</span></button>
+                          <h4 id="modalTitle" class="modal-title"></h4>
+                      </div>
+                      <div id="modalBody" class="modal-body"></div>
+                      <div class="modal-footer">
+                          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                          <button class="btn btn-primary"><a id="eventUrl" target="_blank">Event Page</a></button>
+                      </div>
+                  </div>
+              </div>
+          </div>
         </span>
         </div>
       </div>
     </div>
+
       <div class ="row">
-        <div class ="col-md-4 sidebarfeed">
+        <div class ="col-md-3 sidebarfeed">
           <span class="inline-block"><p>ACTIVITY BAR</p><btn class = "btn btn-activ-add"><%= link_to "+ NEW", new_trip_activity_path(@trip.id) %></btn></span>
           <% @trip.activities.each do |a|  %>
             <div>
@@ -37,11 +58,12 @@
             </div>
           <% end  %>
         </div>
-        <div class="col-md-8 tripdiaryday">
+        <div class="col-md-9 tripdiaryday">
           <p>TRIP PLANNER</p>
           <div id='calendar'></div>
         </div>
       </div>
+
     </div>
   </div>
 </div>
