--- a/app/views/access/home.html.erb
+++ b/app/views/access/home.html.erb
@@ -8,8 +8,8 @@
 
 <div class="row">
 
-<div class="col-xs-6 col-md-4">lhfgkytfkytv tyf kygfckygft kyfky fk yghvfk yghv kyghvyk ghvky gfhvjy gfvhv jy hyhv ghm  yh v jhh vch  yfcg yghy gchjycghyh ghvmh </div>
-<div class="col-xs-12 col-md-8">hfgkytfkytv tyf kygfckygft kyfky fk yghvfk yghv kyghvyk ghvky gfhvjy gfvhv jy hyhv ghm  yh v jhh vch  yfcg yghy gchjycghyh ghvmh </div>
+<div class="col-xs-6 col-md-4"></div>
+
 
 </div>
 
