--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *
  *= require bootstrap
  *= require bootstrap-theme
+ *= require jquery-ui
  *= require fullcalendar
  *= require_tree .
  *= require_self
