--- a/app/views/access/login.html.erb
+++ b/app/views/access/login.html.erb
@@ -1,21 +1,20 @@
 <div class="container-fluid">
-<h1>LOGIN</h1>
-<div class="logincontainer">
-  <%= form_tag(login_path) do %>
-<p>
-  <%= label_tag(:username)%>
-  <%= text_field_tag(:username, params[:username], autofocus: true)%>
-</p>
-<p>
-  <%= label_tag(:password)%>
-  <%= password_field_tag(:password)%>
-</p>
-<p>
-  <%= submit_tag("Log in", class: "btn") %>
-</p>
-<% end %>
-
-
-<%= link_to "Don't have an account? Sign up here.", signup_path%>
-</div>
+  <h1>Log In</h1>
+  <br>
+  <div class="logincontainer">
+    <%= form_tag(login_path) do %>
+      <p>
+        <%= label_tag(:username)%>
+        <%= text_field_tag(:username, params[:username], autofocus: true)%>
+      </p>
+      <p>
+        <%= label_tag(:password)%>
+        <%= password_field_tag(:password )%>
+      </p>
+      <p>
+        <%= submit_tag("LOG IN", class: "btn-tripr-inverse") %>
+      </p>
+  <% end %>
+  Don't have an account?<br><%= link_to "Sign up here.", signup_path%>
+  </div>
 </div>
