--- a/app/views/access/signup.html.erb
+++ b/app/views/access/signup.html.erb
@@ -1,27 +1,28 @@
-<h1>Signup</h1>
-
-<% if @user.errors.any? %>
-  <% @user.errors.full_messages.each do |error| %>
-    <p class = "text-danger"><%= error %></p>
+<div class="container-fluid">
+  <h1>Sign Up</h1>
+  <br>
+  <% if @user.errors.any? %>
+    <% @user.errors.full_messages.each do |error| %>
+      <p class = "text-danger"><%= error %></p>
+    <% end %>
   <% end %>
-<% end %>
-
-<%= form_for(@user, url: signup_path) do |f|%>
-
-<p>
-  <%= f.label(:username) %>
-  <%= f.text_field(:username, autofocus: true) %>
-</p>
-<p>
-  <%= f.label(:email)%>
-  <%= f.text_field(:email)%>
-</p>
-<p>
-  <%= f.label(:password) %>
-  <%= f.password_field(:password) %>
-</p>
-<p>
-  <%= f.submit("Signup", class: "btn btn-tripr") %>
-</p>
-  <%= link_to "Have an account already? Log in here", login_path %>
-<% end %>
+  <div class="logincontainer">
+    <%= form_for(@user, url: signup_path) do |f|%>
+      <p>
+        <%= f.label(:username) %>
+        <%= f.text_field(:username, autofocus: true) %>
+      </p>
+      <p>
+        <%= f.label(:email)%>
+        <%= f.text_field(:email)%>
+      </p>
+      <p>
+        <%= f.label(:password) %>
+        <%= f.password_field(:password) %>
+      </p>
+      <p>
+        <%= f.submit("SIGN UP", class: "btn-tripr-inverse") %>
+      </p>
+      Have an account already?<br><%= link_to "Log in here", login_path %>
+    <% end %>
+</div>
