--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -4,9 +4,51 @@
     $(document).ready(function(){
       var date = gon.start_date;
       console.log(date);
-      $('#calendar').fullCalendar({});
+      $('#calendar').fullCalendar({
+        droppable: true,
+        dropAccept: '.draggable-event',
+        drop: function(date, jsEvent, ui) {
+          console.log("dropped on date", date);
+          console.log("event that was dropped", this);
+          //some kind of ajax call or alternative to pass the date to the activity record and reset it's proposed date as date.
+          //use data attribute to pass in id?
+          //set the activity in the activity bar to not show
+          //
+        },
+        eventReceive: function () {
+          alert("received");
+        }
+      });
       $('#calendar').fullCalendar('gotoDate', date );
+      $('#my-draggable').draggable({
+          revert: true,      // immediately snap back to original position
+          revertDuration: 0
+      });
     });
+
+
+
+    // $('#calendar').fullCalendar({
+    //   droppable: true,
+    //   drop: function(date) {
+    //       alert("Dropped on " + date.format());
+    //   }
+    // });
+
+    function allowDrop(ev) {
+    ev.preventDefault();
+    }
+
+    function drag(ev) {
+    ev.dataTransfer.setData("date", ev.target.proposed_on);
+    }
+
+    function drop(ev) {
+    ev.preventDefault();
+    var data = ev.dataTransfer.getData("text");
+    ev.target.appendChild(document.getElementById(data));
+}
+
   </script>
 
   <div class ="row">
@@ -25,23 +67,7 @@
       <div class="col-md-8">
         <span class="inline-block">
           <p class="tripdetail">Departure: <%= @trip.start_date %> </p>&nbsp&nbsp<p class="tripdetail">Return: <%= @trip.start_date %> </p>
-        <btn class = "btn btn-tripr-add"><%= link_to "+ NEW ACTIVITY", new_trip_activity_path(@trip.id) %></btn>
-
-        <div id="fullCalModal" class="modal fade">
-              <div class="modal-dialog">
-                  <div class="modal-content">
-                      <div class="modal-header">
-                          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span> <span class="sr-only">close</span></button>
-                          <h4 id="modalTitle" class="modal-title"></h4>
-                      </div>
-                      <div id="modalBody" class="modal-body"></div>
-                      <div class="modal-footer">
-                          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                          <button class="btn btn-primary"><a id="eventUrl" target="_blank">Event Page</a></button>
-                      </div>
-                  </div>
-              </div>
-          </div>
+          <btn class = "btn btn-tripr-add"><%= link_to "+ NEW ACTIVITY", new_trip_activity_path(@trip.id)%></btn>
         </span>
         </div>
       </div>
@@ -51,7 +77,7 @@
         <div class ="col-md-3 sidebarfeed">
           <span class="inline-block"><p>ACTIVITY BAR</p><btn class = "btn btn-activ-add"><%= link_to "+ NEW", new_trip_activity_path(@trip.id) %></btn></span>
           <% @trip.activities.each do |a|  %>
-            <div>
+            <div draggable="true" class="draggable-event" id="my-draggable">
             Activity: <%= a.name %>
             Address: <%= a.address %>
             Cost: $<%= a.cost %>
@@ -104,5 +130,4 @@ setInterval(function () {
 }, 1000);
 </script>
 
-
-To do: get it to set out a diary form using trip dates | get the countdown clock to use date for this trip | add activities window on the left | add links for the activities through to the activity pages or pop up modals showing details (perhaps better - no need to leave the page).
+To do: get it to highlight trip dates on the diary (only show trip dates) | 2 decimal points on price |get drag and drop activities working | add links for the activities through to the activity pages or pop up modals showing details (perhaps better - no need to leave the page) | style it.
