--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -13,8 +13,8 @@
       <%= form_for(@activity, url: trip_activities_path) do |f|%>
 
         <p>
-          <%= f.label(:name) %>
-          <%= f.text_field(:name, autofocus: true) %>
+          <%= f.label(:title) %>
+          <%= f.text_field(:title, autofocus: true) %>
         </p>
         <p>
           <%= f.label(:summary)%>
@@ -37,8 +37,8 @@
           <%= f.text_field(:zip_code) %>
         </p>
         <p>
-          <%= f.label(:time_period) %>
-          <%= f.time_field(:time_period) %>
+          <%= f.label(:duration) %>
+          <%= f.number_field(:duration, step: 0.01) %>
         </p>
         <p>
           <%= f.label(:cost) %>
