--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,8 +1,8 @@
 <%= render 'layouts/header' %>
-
+<div class="container-fluid">
   <div class ="row">
     <div class ="col">
-      <br>
+
       <span class="inline-block">
         <p class="welcome"> Welcome to Tripr! </p><p class="headerend"> &nbsp not long now...</p><p class="countdowntimer"><span id="countdown"></span></p>
       </span>
