--- a/app/views/access/login.html.erb
+++ b/app/views/access/login.html.erb
@@ -1,5 +1,7 @@
-<div class="container-fluid">
-  <h1>Log In</h1>
+<div class="headercontainer-fluid">
+<br>
+  <p class="triprtitle">tripr</p>
+  <p class="loginintitle">Log In</p>
   <br>
   <div class="logincontainer">
     <%= form_tag(login_path) do %>
