--- a/app/views/access/signup.html.erb
+++ b/app/views/access/signup.html.erb
@@ -1,5 +1,6 @@
-<div class="container-fluid">
-  <h1>Sign Up</h1>
+<div class="headercontainer-fluid">
+  <br>
+  <p class="loginintitle">Sign Up</h1>
   <br>
   <% if @user.errors.any? %>
     <% @user.errors.full_messages.each do |error| %>
