--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -55,6 +55,6 @@
   </div>
 </div>
 
-Other things to do here: add hidden field date created stamp | sort out the time period field - it shows a time at the moment | add hidden field trip_id | make the category field a dropdown finite list? | rename form inputs | put placeholders in | make the boxes aligned and better lengths | make the background image this one | make the box the length of the form flex with form size | Make the location address input form an autocomplete google maps form | Add twitter/fb/g+ ? | Add tags insted of category input field - consider : fitness, outdoors, indoors, beach, active, cultural, arts, shopping, food, food - straightforward, food - brunch, food - highend, bar - dive, bar - glam, bar-games, bar, unusual, park, .
+<!-- Other things to do here: add hidden field date created stamp | sort out the time period field - it shows a time at the moment | add hidden field trip_id | make the category field a dropdown finite list? | rename form inputs | put placeholders in | make the boxes aligned and better lengths | make the background image this one | make the box the length of the form flex with form size | Make the location address input form an autocomplete google maps form | Add twitter/fb/g+ ? | Add tags insted of category input field - consider : fitness, outdoors, indoors, beach, active, cultural, arts, shopping, food, food - straightforward, food - brunch, food - highend, bar - dive, bar - glam, bar-games, bar, unusual, park, . -->
 
 <%= render 'layouts/footer' %>
